[package]
name = "ethereum-mysql"
version = "2.1.0"
edition = "2021" 
description = "Ethereum types (Address, U256) wrapper for seamless SQL database integration with SQLx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rollp0x/ethereum-mysql"
keywords = ["ethereum", "sql", "sqlx", "u256", "database"]
categories = ["database", "web-programming", "cryptography"]
readme = "README.md"

[features]
sqlx_binary = ["dep:sqlx-core","dep:thiserror"]
sqlx = ["sqlx_binary"]
sqlx_str = ["dep:sqlx-core","dep:thiserror"]
# Serialization support
serde = ["dep:serde", "alloy/serde"]
# Common scenarios
sqlx_full = ["sqlx", "serde"]
sqlx_str_full = ["sqlx_str", "serde"]

[dependencies]
alloy = { version = "1.0.3", default-features = false }
sqlx-core = {version = "0.8",optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "2.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# SQLx with runtime support for database integration tests
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite"] }

[package.metadata.docs.rs]
features = ["sqlx", "serde"]